--- a/assets/pages/profile.html
+++ b/assets/pages/profile.html
@@ -1,5 +1,5 @@
-<div id="iorn" class="gjs-row">
-    <h1 class="page-title">Your Profile</h1>
+<h1 class="page-title">Your Profile</h1>
+<div class="page-content">
     <div class="p-3 page-modal hide-notifications enable-notifications">
         <p id="ibb93" class="page-smaller-text enable-notifications">Enable push notifications to receive notifications of our latest
             deals!</p>
@@ -76,11 +76,6 @@
     width: 8%;
     display: table-cell;
     height: 75px;
-  }
-
-  #iorn {
-    text-align: center;
-    padding: 10px 10px 150px;
   }
 
   #ixpfe {
