--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -1,5 +1,5 @@
 <h1 class="page-title">Your Business</h1>
-<div>
+<div class="page-content">
     <div class="page-text my-4">
         <div class="py-3 mb-5">
             <hr style="margin: auto; width: 95%"/>
@@ -10,7 +10,6 @@
             You can easily customize everything on these pages.
         </p>
     </div>
-
     <div class="page-text my-4 py-3" style="font-size: 16px">
         Navigate to the other pages to find the example campaigns, rewards and more.
     </div>
