--- a/assets/pages/profile.html
+++ b/assets/pages/profile.html
@@ -1,26 +1,38 @@
 <h1 class="page-title">Your Profile</h1>
 <div class="page-content">
-    <div class="p-3 page-modal hide-notifications enable-notifications">
-        <p id="ibb93" class="page-smaller-text enable-notifications">Enable push notifications to receive notifications of our latest
-            deals!</p>
-        <br/>
-        <button class="btn btn-primary enable-notifications"><b>Enable Notifications</b></button>
+    <div class="px-8 py-8">
+        <div class="grid gap-8 items-start justify-center">
+            <div class="hide-notifications enable-notifications relative group">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-pink-600 to-purple-600 rounded-lg blur opacity-75 group-hover:opacity-100 transition duration-1000 group-hover:duration-200 animate-tilt"></div>
+                <button class="enable-notifications relative px-7 py-2 bg-neutral-300 bg-opacity-50 rounded-lg leading-none flex items-center divide-x divide-gray-600">
+                    <span class="flex items-center space-x-5">
+                        <svg style="height: 35px;" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                  d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path>
+                        </svg>
+                        <span class="pr-6 text-gray-100">Enable Push Notifications</span>
+                    </span>
+                </button>
+            </div>
+        </div>
     </div>
-    <div id="iplef" class="gjs-row">
-        <div id="profile-qr-container" class="gjs-cell">
-            <div data-qrcode="{{ user.id }}" id="ixpfe"></div>
+
+
+    <div class="p-1">
+        <div id="profile-qr-container" class="">
+            <div data-qrcode="{{ user.id }}" id="profile-qr-code"></div>
             <div class="page-text">Show this QR code when making a purchase to earn rewards!</div>
         </div>
     </div>
-    <hr class="text-secondary" style="margin: 50px 0"/>
+    <hr class="text-secondary my-5"/>
     <!--
     If id="user-registration" is set, this will be used as the registration form too.
     Alternatively, page with pathname of "registration" or the premade template in the PWA can be used.
     -->
     <div id="user-registration">
         <h2 class="text-light">Your Information</h2>
-        <div id="i2fd1" class="gjs-row">
-            <div id="ix5tz" class="gjs-cell">
+        <div id="user-settings" class="">
+            <div id="ix5tz" class="">
                 <div>
                     <form id="user-form">
                         <div>
@@ -33,6 +45,7 @@
                             <input type="email" class="form-control" id="user-email" name="email" value=""
                                    placeholder="email@example.com"/>
                         </div>
+                        <!-- Uncomment for birthday selection
                         <div>
                             <label for="birthday-selector" class="text-light">Birthday</label>
                         </div>
@@ -40,6 +53,7 @@
                             <input type="date" class="form-control" id="birthday-selector" name="birthday" autocomplete="bday"
                                    min="1900-01-01" max="2010-12-31"/>
                         </div>
+                        -->
                         <div class="my-3">
                             <div style="white-space: nowrap;">
                                 <input required type="checkbox" id="tos-privacy-accept" name="acceptTosPrivacy" value="true"/>
@@ -66,32 +80,16 @@
     box-sizing: border-box;
   }
 
-  .gjs-row {
-    display: table;
-    padding: 10px;
-    width: 100%;
-  }
-
-  .gjs-cell {
-    width: 8%;
-    display: table-cell;
-    height: 75px;
-  }
-
-  #ixpfe {
+  #profile-qr-code {
     width: 70%;
     margin: 0 auto;
     padding: 10px 0;
   }
 
-  #iplef {
-    padding: 10px;
-  }
-
-  #i2fd1 {
+  #user-settings {
     text-align: left;
-    padding: 25px 10px;
-    margin: 20px 0 0;
+    padding: 15px 10px;
+    margin: 10px 0 0;
   }
 
   #tos-privacy-accept {
@@ -99,11 +97,7 @@
     margin: 3px 3px 3px 4px;
   }
 
-  #birthday-selector {
-    padding: 4px;
-  }
-
-  #ibb93 {
+  #push-notification-text {
     padding: 2px 10px;
     color: rgb(24, 109, 198);
     font-size: 14px;
@@ -118,9 +112,5 @@
   }
 
   @media (max-width: 768px) {
-    .gjs-cell {
-      width: 100%;
-      display: block;
-    }
   }
 </style>
