--- a/assets/pages/rewards.html
+++ b/assets/pages/rewards.html
@@ -6,170 +6,94 @@
         <b>You don&#039;t have any rewards.</b>
         {{/unless}}
     </div>
-    <div id="i0ci" class="gjs-row">
-        <div id="ie7b5" class="gjs-cell">
-            <p id="in8w">{{#each user.rewards}}</p>
-            <div id="i3ys" class="card page-modal">
-                <p id="in8k">
-                    <b>
-                        <u>{{name}}</u>
-                    </b>
-                </p>
-                <div data-qrcode="{{scanCode}}" id="iwn9o"></div>
-                <p id="ip9ez">{{description}}</p>
-                <p id="ivr2q">{{itemDiscount}}</p>
-                <p id="iqyhu">{{requirement}}</p>
-                <p id="iosh8">{{#if customerPoints}} You got {{customerPoints}} points {{/if}}</p>
-                <p id="idi7g">{{#if products}} Products: {{#each products}}{{name}}{{#unless @last}}, {{/unless}}{{/each}}{{/if}}</p>
-                <p id="i6755">{{#if categories}} Categories: {{#each categories}}{{name}}{{#unless @last}}, {{/unless}}{{/each}}{{/if}}</p>
+
+
+    <div>
+        {{#each user.rewards}}
+        <div>
+            <div class="w-full h-full py-5 flex justify-center items-center">
+                <div class="relative shadow-md pl-1 bg-transparent flex justify-center rounded-xl hover:scale-105 duration-500 transform transition cursor-pointer">
+                    <!-- Tag Discount -->
+                    <div class="top-0 left-0 mt-3 px-2 rounded-lg absolute z-30 bg-green-500 text-gray-100 text-xs md:text-sm font-medium md:block">
+                        Available
+                    </div>
+                    <div class="top-0 left-0 h-2 md:h-3 mt-5 px-2 absolute z-20 bg-green-500"></div>
+                    <div class="top-0 left-0 h-2 md:h-3 mt-6 pl-5 rounded-3xl absolute z-0 bg-green-600"></div>
+                    <div class="w-72 pb-2 bg-white rounded-xl shadow-xl z-10">
+                        <div class="relative">
+                            <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
+                            <div class="-bottom-2 right-0 mb-2 mr-2 px-2 rounded-lg absolute bg-yellow-500 text-gray-100 text-xs font-medium">
+                                New Reward
+                            </div>
+                        </div>
+                        <div class="px-2 py-1">
+                            <!-- Reward and its name -->
+                            <div class="text-sm md:text-base font-bold pr-2">
+                                {{name}}
+                            </div>
+                            <div class="flex py-2">
+                                <p class="bg-gray-200 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">
+                                    {{itemDiscount}}
+                                </p>
+                                <div class="flex justify-between item-center">
+                                    <div class="flex items-center">
+                                        <!-- Star -->
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-3 md:h-5 md:w-5 text-yellow-500"
+                                             viewBox="0 0 20 20" fill="currentColor">
+                                            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
+                                        </svg>
+                                        <!-- Customer points -->
+                                        <p class="text-gray-600 font-bold text-xs md:text-sm ml-1">
+                                            +{{#if customerPoints}} {{customerPoints}} points {{/if}}
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Description etc -->
+                            <div class="pb-1 md:pb-2 text-xs md:text-sm text-gray-500">
+                                <p>
+                                    {{description}}
+                                </p>
+                                <div>
+                                    {{#if products}}
+                                    <p class="font-bold">Categories:
+                                        <span class="inline-flex bg-gray-100 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">
+                                        {{#each categories}}
+                                            <span class="inline-flex bg-gray-100 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">{{name}}</span>
+                                        {{/each}}
+                                        </span>
+                                    </p>
+                                    {{/if}}
+                                </div>
+                                <div>
+                                    {{#if products}}
+                                    <p class="font-bold">Products:
+                                        <span class="inline-flex bg-gray-100 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">
+                                        {{#each products}}
+                                            <span class="inline-flex bg-gray-100 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">{{name}}</span>
+                                        {{/each}}
+                                        </span>
+                                    </p>
+                                    {{/if}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <p id="izywz">{{/each}}</p>
+
         </div>
+        {{/each}}
     </div>
-    <div id="imqvp">{{#if customerRewards.used}} Used Rewards ({{customerRewards.used}}) {{/if}}
-    </div>
-    <div id="iw7o6" class="gjs-row">
-        <div id="i86j6" class="gjs-cell">
-            <p id="iydvk">{{#each user.usedRewards}}</p>
-            <div class="loyalty-user-reward">
-                <p id="ih2pq" class="text-primary">
-                    <b>
-                        <span>{{reward.name}}</span>
-                    </b>
-                </p>
-                <p id="ikekq">{{reward.description}}</p>
-                <p id="i4c36">
-                    <b>{{reward.itemDiscount}}</b>
-                </p>
-                <p id="i6ey5">{{#if customerPoints}} You got {{customerPoints}} points {{/if}}</p>
-            </div>
-            <div id="i4fqm">Used: {{dateUsed}}</div>
-            <p id="irpnj">{{/each}}</p>
-        </div>
-    </div>
+
+
 </div>
 <style>
-
-  /* For development only */
-  @import "../../panel/public/templates/common_main.css";
-
-  * {
-    box-sizing: border-box;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-
-  body {
-    margin: 0;
-  }
-
-  .gjs-row {
-    display: table;
-    padding: 10px;
-    width: 100%;
-  }
-
-  .gjs-cell {
-    width: 8%;
-    display: table-cell;
-    height: 75px;
-  }
-
-  #i3ys {
-    text-align: center;
-    background-color: rgba(78, 223, 218, 0.56);
-  }
 
   #isx5t {
     padding: 10px;
     text-align: center;
     color: rgb(113, 113, 113);
-  }
-
-  #in8k {
-    color: rgb(79, 79, 79);
-    font-size: 20px;
-  }
-
-  #iosh8 {
-    font-size: 14px;
-  }
-
-  #idi7g {
-    font-size: 14px;
-    margin: 30px 0 14px;
-    color: rgb(86, 86, 86);
-  }
-
-  #i6755 {
-    font-size: 14px;
-    color: rgb(86, 86, 86);
-  }
-
-  #ip9ez {
-    font-size: 14px;
-  }
-
-  #iqyhu {
-    font-size: 14px;
-  }
-
-  #ivr2q {
-    color: rgb(35, 35, 35);
-  }
-
-  #iwn9o {
-    width: 200px;
-    margin: auto;
-  }
-
-  #ie7b5 {
-    text-align: center;
-  }
-
-  #ih2pq {
-    font-size: 20px;
-  }
-
-  #ikekq {
-    font-size: 14px;
-  }
-
-  #i4c36 {
-    margin: 8px 0;
-    color: rgba(77, 77, 77, 0.8);
-  }
-
-  #i6ey5 {
-    font-size: 14px;
-  }
-
-  #i86j6 {
-    text-align: center;
-  }
-
-  #iw7o6 {
-    text-align: left;
-  }
-
-  #imqvp {
-    padding: 10px;
-    text-align: center;
-    font-size: 20px;
-    color: rgb(136, 136, 136);
-  }
-
-  #i4fqm {
-    padding: 10px;
-  }
-
-  @media (max-width: 768px) {
-    .gjs-cell {
-      width: 100%;
-      display: block;
-    }
   }
 
 </style>
