--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -1,7 +1,7 @@
 <h1 class="page-title">Your Business</h1>
 <div class="page-content">
     <div class="page-text my-4">
-        <div class="py-3 mb-5">
+        <div class="py-1 mb-2">
             <hr style="margin: auto; width: 95%"/>
             <p class="py-3" style="color: aquamarine; font-weight: bold;">This could be your first loyalty app!</p>
             <hr style="margin: auto; width: 95%"/>
@@ -10,7 +10,44 @@
             You can easily customize everything on these pages.
         </p>
     </div>
-    <div class="page-text my-4 py-3" style="font-size: 16px">
+    <div class="page-text my-2 py-2" style="font-size: 16px">
         Navigate to the other pages to find the example campaigns, rewards and more.
     </div>
+
+    <div class="flex justify-center items-center text-left">
+        <div class="bg-gray-200 bg-opacity-70 p-10 rounded-lg shadow-md">
+            <div class="flex justify-between">
+                <div>
+                    <h3 class="text-xs uppercase">Current level</h3>
+                    <h2 class="">{{currentLevel.name}}</h2>
+                </div>
+                <div class="text-right">
+                    <h3 class="text-xs uppercase font-bold">Next level</h3>
+                    <h2 class="font-bold">{{nextLevel.name}}</h2>
+                </div>
+            </div>
+            <div class="mt-4 mb-10">
+                <p class="text-gray-600">{{currentLevel.progress}}% - {{nextLevel.pointsNeeded}} more points needed</p>
+                <div class="bg-gray-400 w-64 h-3 rounded-lg mt-2 overflow-hidden">
+                    <div class="bg-pink-400 w-3/4 h-full rounded-lg shadow-md"></div>
+                </div>
+            </div>
+            <h3 class="text-xs uppercase">Rewards</h3>
+            <div class="py-1">{{#each endReward}}</div>
+            <div class="mb-2">
+                <u class="reward-title">
+                    <span class="text-primary"><b>{{itemDiscount}}</b></span> - <span class="text-secondary">{{name}}</span>
+                </u>
+                <p class="text-secondary">{{description}}</p>
+                <p class="text-points">
+                    {{#if customerPoints}}
+                    <b>+{{customerPoints}}</b> points!
+                    {{/if}}
+                </p>
+                <p class="text-warning">{{requirement}}</p>
+            </div>
+            <div>{{/each}}</div>
+        </div>
+    </div>
+
 </div>
