style: pages and more

--- a/assets/pages/rewards.html
+++ b/assets/pages/rewards.html
@@ -12,16 +12,16 @@
         <div>
             <div class="w-full h-full py-5 flex justify-center items-center">
                 <div class="relative shadow-md pl-1 bg-transparent flex justify-center rounded-xl hover:scale-110 duration-500 transform transition cursor-pointer">
-                    <div class="top-0 left-0 mt-3 px-2 rounded-lg absolute z-30 bg-yellow-500 text-gray-100 text-xs md:text-sm font-medium md:block">
-                        New Reward
+                    <div class="top-0 left-0 mt-3 px-2 rounded-lg absolute z-30 bg-green-500 text-gray-100 text-xs md:text-sm font-medium md:block">
+                        Available
                     </div>
                     <div class="top-0 left-0 h-2 md:h-3 mt-5 px-2 absolute z-20 bg-green-500"></div>
                     <div class="top-0 left-0 h-2 md:h-3 mt-6 pl-5 rounded-3xl absolute z-0 bg-green-600"></div>
                     <div class="w-80 pb-2 bg-white rounded-xl shadow-xl z-10">
                         <div class="relative">
                             <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
-                            <div class="-bottom-2 right-0 mb-2 mr-2 px-2 rounded-lg absolute bg-green-500 text-gray-100 text-xs font-medium">
-                                Available
+                            <div class="-bottom-2 right-0 mb-2 mr-2 px-2 rounded-lg absolute bg-yellow-500 text-gray-100 text-xs font-medium">
+                                Your reward
                             </div>
                         </div>
                         <div class="px-2 py-1">
