--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -16,7 +16,10 @@
 
     <div class="flex justify-center items-center text-left">
         <div class="m-5 bg-gray-200 bg-opacity-70 py-6 px-12 rounded-lg shadow-md">
-            <p class="text-center text-s text-gray-700 pb-7">
+            <h2 class="text-center mb-1 font-bold text-pink-700">
+                Customer Level
+            </h2>
+            <p class="text-center text-xs text-gray-700 pb-4">
                 Participate in the campaigns to level up and earn rewards.
             </p>
             <div class="flex justify-between">
@@ -39,22 +42,28 @@
                     ></div>
                 </div>
             </div>
-            {{#if extLevel.rewards}}
-            <h3 class="text-xs uppercase">Rewards</h3>
-            <div class="py-1">{{#each nextLevel.rewards}}</div>
-            <div class="mb-2">
-                <u class="reward-title">
-                    <span class="text-primary"><b>{{itemDiscount}}</b></span> - <span class="text-secondary">{{name}}</span>
-                </u>
-                <p class="text-secondary">{{description}}</p>
-                <p class="text-points">
-                    {{#if customerPoints}}
-                    <b>+{{customerPoints}}</b> points!
-                    {{/if}}
-                </p>
-                <p class="text-warning">{{requirement}}</p>
+            {{#if nextLevel.rewards}}
+            <hr class="mb-1" style="border-color: lightgray;"/>
+            <h3 class="text-xs uppercase">Next Rewards</h3>
+            <div class="mt-1 divide-y divide-slate-100">
+                {{#each nextLevel.rewards}}
+                <div class="mb-2">
+                    <div class="reward-title">
+                        <p class="w-max bg-gray-200 p-1 px-2 mr-2 -ml-1 rounded-full text-xs font-medium text-gray-900">
+                            {{itemDiscount}}
+                        </p>
+                        <span class="text-gray-700">{{name}}</span>
+                    </div>
+                    <p class="text-gray-600">{{description}}</p>
+                    <p class="text-points">
+                        {{#if customerPoints}}
+                        <b>+{{customerPoints}}</b> points!
+                        {{/if}}
+                    </p>
+                    <p class="text-warning">{{requirement}}</p>
+                </div>
+                {{/each}}
             </div>
-            <div>{{/each}}</div>
             {{/if}}
         </div>
     </div>
