--- a/assets/pages/profile.html
+++ b/assets/pages/profile.html
@@ -58,7 +58,8 @@
                         </label>
                     </div>
                     <div>
-                        <button type="submit" class="w-full py-3 bg-blue-600 hover:bg-blue-700 rounded text-sm font-bold text-gray-50 transition duration-200">
+                        <button type="submit"
+                                class="w-full py-3 bg-blue-600 hover:bg-blue-700 rounded text-sm font-bold text-gray-50 transition duration-200">
                             Save
                         </button>
                     </div>
@@ -91,7 +92,8 @@
     padding: 10px 0;
   }
 
-  #user-registration {
+  #profile-qr-code > svg {
+    border-radius: 8px;
   }
 
   #tos-privacy-accept {
