fix: clipboard and more stuff

--- a/assets/pages/campaigns.html
+++ b/assets/pages/campaigns.html
@@ -5,7 +5,7 @@
 </div>
 <div class="page-content">
     <div class="p-2">{{#each campaigns}}</div>
-    <div class="m-7 bg-gray-200 bg-opacity-70 p-1 rounded-lg shadow-md my-3">
+    <div class="m-7 mb-16 bg-gray-200 bg-opacity-70 p-1 rounded-lg shadow-md my-3">
         <div class="p-3">
             <h2 class="card-title text-m font-bold text-pink-600">{{name}}</h2>
             <div class="pt-5" style="font-size: 36px;">
