--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="flex justify-center items-center text-left">
-        <div class="m-5 bg-gray-200 bg-opacity-70 py-6 px-12 rounded-lg shadow-md">
+        <div class="m-5 bg-white py-6 px-12 rounded-xl hover:scale-105 duration-500 transform transition">
             <h2 class="text-center mb-1 font-bold text-pink-600">
                 Customer Level
             </h2>
