--- a/assets/pages/campaigns.html
+++ b/assets/pages/campaigns.html
@@ -3,9 +3,9 @@
     Show your
     <i><a href="/?page=profile" class="">QR code</a></i> to participate.
 </div>
-<div class="page-content">
+<div class="page-content grid place-items-center">
     <div class="p-2">{{#each campaigns}}</div>
-    <div class="m-7 mb-16 bg-gray-200 bg-opacity-70 p-1 rounded-lg shadow-md my-3">
+    <div class="m-7 max-w-lg mb-16 bg-white p-1 rounded-xl hover:scale-105 duration-500 transform transition">
         <div class="p-3">
             <h2 class="card-title text-m font-bold text-pink-600">{{name}}</h2>
             <div class="pt-5" style="font-size: 36px;">
