fix: input as email

--- a/assets/pages/profile.html
+++ b/assets/pages/profile.html
@@ -48,8 +48,8 @@
                     <div>
                         <input id="user-email"
                                class="w-full p-3 text-sm bg-gray-50 focus:outline-none border border-gray-200 rounded text-gray-600"
-                               type="text"
-                               placeholder="Email">
+                               type="email"
+                               placeholder="Your email">
                     </div>
                     <!-- Uncomment for the birthday selector
                     <div class="">
