--- a/assets/pages/profile.html
+++ b/assets/pages/profile.html
@@ -49,7 +49,9 @@
                         <input id="user-email"
                                class="w-full p-3 text-sm bg-gray-50 focus:outline-none border border-gray-200 rounded text-gray-600"
                                type="email"
-                               placeholder="Your email">
+                               placeholder="Your email"
+                               autocomplete="on"
+                        >
                     </div>
                     <!-- Uncomment for the birthday selector
                     <div class="">
