--- a/assets/pages/rewards.html
+++ b/assets/pages/rewards.html
@@ -45,7 +45,7 @@
                                     <div class="flex items-center">
                                         <!-- Customer points -->
                                         <p class="text-gray-600 font-bold text-xs md:text-sm ml-1">
-                                            +{{#if customerPoints}} {{customerPoints}} points {{/if}}
+                                            {{#if customerPoints}} +{{customerPoints}} points {{/if}}
                                         </p>
                                     </div>
                                 </div>
@@ -85,6 +85,64 @@
 
         </div>
         {{/each}}
+
+        {{#if user.usedRewards}}
+        <hr class="bg-gray-200"/>
+        {{/if}}
+
+        {{#each user.usedRewards}}
+        <div>
+            <div class="w-full h-full py-5 flex justify-center items-center">
+                <div class="relative shadow-md pl-1 bg-transparent flex justify-center rounded-xl">
+                    <div class="top-0 left-0 mt-3 px-2 rounded-lg absolute z-30 bg-gray-500 text-gray-100 text-xs md:text-sm font-medium md:block">
+                        Used
+                    </div>
+                    <div class="top-0 left-0 h-2 md:h-3 mt-5 px-2 absolute z-20 bg-gray-500"></div>
+                    <div class="top-0 left-0 h-2 md:h-3 mt-6 pl-5 rounded-3xl absolute z-0 bg-gray-500"></div>
+                    <div class="w-80 pb-2 bg-white rounded-xl shadow-xl z-10">
+                        <div class="relative">
+                            <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
+                            <div class="-bottom-2 right-0 mb-2 mr-2 px-2 rounded-lg absolute bg-yellow-800 text-gray-100 text-xs font-medium">
+                                Used reward
+                            </div>
+                        </div>
+                        <div class="px-2 py-1">
+                            <div class="text-sm md:text-base font-bold pr-2">
+                                <span>
+                                    {{reward.name}}
+                                </span>
+                            </div>
+                            <div class="flex py-2">
+                                <!-- The discount label e.g., "50% OFF" -->
+                                <p class="bg-gray-200 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">
+                                    {{reward.itemDiscount}}
+                                </p>
+                                <div class="flex justify-between item-center">
+                                    <div class="flex items-center">
+                                        <!-- Customer points -->
+                                        <p class="text-gray-600 font-bold text-xs md:text-sm ml-1">
+                                            {{#if reward.customerPoints}} +{{reward.customerPoints}} points {{/if}}
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Description (categories, products) etc -->
+                            <div class="h-12 pb-1 md:pb-2 text-xs md:text-sm text-gray-500">
+                                <p>
+                                    {{description}}
+                                    <br/>
+                                    <br/>
+                                    Used {{dateUsed}}
+                                </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+
     </div>
 
 
