--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -1,6 +1,6 @@
 <!--
 For developers:
-- these HTML files are processed with handlebars (https://handlebarsjs.com/)
+- These HTML files are processed with handlebars (https://handlebarsjs.com/)
 - Looking for all placeholders? Visit "https://<your app>.myapp.getloyalty.app/api/page/placeholder-context" when logged in as the business owner
 -->
 
