feat: show expiration in rewards.html

--- a/assets/pages/rewards.html
+++ b/assets/pages/rewards.html
@@ -77,6 +77,13 @@
                                     </p>
                                     {{/if}}
                                 </div>
+                                <div>
+                                    {{#if expires}}
+                                    <p>
+                                        Expires <span>{{expires}}</span>
+                                    </p>
+                                    {{/if}}
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -133,7 +140,7 @@
                                     <br/>
                                     <br/>
                                     Used {{dateUsed}}
-                                </span>
+                                    </span>
                                 </p>
                             </div>
                         </div>
